Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Private Beta
-
None
-
None
Description
We're calling AddConjunctPredicate, without checking the result. In the case of double columns, we often see the double literal as a float, and Kudu doesn't do type promotion for these predicate calls. It's likely returning an error, which Impala is ignoring. This then cases Impala to think it has pushed down a predicate when in fact it has not.